# architect

./: LICENSE  prompt.md
mcp-arch-linux/: Cargo.toml  README.md  SETUP_GUIDE.md  install.sh  package.json  quick_setup.sh
mcp-arch-linux/config/: server.yaml
mcp-arch-linux/docs/: API.md  SETUP_GUIDE.md
mcp-arch-linux/scripts/: install.sh  quick-setup.sh
mcp-arch-linux/src/: lib.rs  main.rs  server.js
mcp-arch-linux/src/core/: config.js  logger.js  mcp-protocol.js  mcp-server.js  plugin-manager.js
mcp-arch-linux/src/mcp/: jsonrpc.rs  mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
mcp-arch-linux/src/plugins/: arch-install-plugin.js  arch_install.rs  base-plugin.js  hyprland-plugin.js  hyprland.rs  mod.rs  screen-capture-plugin.js  screen_capture.rs  system-plugin.js
mcp-arch-linux/src/security/: mod.rs  security-manager.js
mcp-arch-linux/src/system/: command-executor.js  command.rs  disk.rs  hyprland.rs  mod.rs  package.rs
mcp-arch-linux/systemd/: mcp-arch-linux.service
